// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form /> component renders simple form 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  row-gap: 24px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
  width: 100%;
  position: relative;
}

.emotion-2 i {
  color: #3e3e3e;
}

.emotion-2:has(input[disabled]) i,
.emotion-2:has(input[disabled]) label>span {
  color: #a9a9a9;
}

.emotion-2:has(input[readonly]:not(input[disabled])) label,
.emotion-2:has(input[readonly]:not(input[disabled])) label>span {
  color: #3e3e3e;
}

.emotion-2 input[type="search"]::-webkit-search-decoration,
.emotion-2 input[type="search"]::-webkit-search-cancel-button,
.emotion-2 input[type="search"]::-webkit-search-results-button,
.emotion-2 input[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-3 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e3e3e;
  cursor: inherit;
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  left: 12px;
  top: 16px;
  position: absolute;
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 198px;
  width: 100%;
  height: 54px;
  color: #252525;
  gap: 8px;
  background-color: #e6e6e6;
  padding-inline: 12px;
  border-radius: 0px;
  border: 1px solid #c5c5c5;
}

.emotion-4:focus-within,
.emotion-4:hover:not([disabled]) {
  border: 1px solid #00677f;
}

.emotion-4:hover:([disabled]) {
  border: 1px solid #c5c5c5;
}

.emotion-4:has(input[readonly]:not([disabled])) {
  background-color: #e6e6e6;
  color: #3e3e3e;
}

.emotion-4:has(input[disabled]),
.emotion-4:has(input[disabled])>* {
  cursor: not-allowed;
}

.emotion-4:has(input[disabled]):hover,
.emotion-4:has(input[disabled])>*:hover {
  border-color: #c5c5c5;
}

.emotion-4:has(input[disabled]) input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-4:has(input[disabled]) input::-moz-placeholder {
  color: transparent;
}

.emotion-4:has(input[disabled]) input:-ms-input-placeholder {
  color: transparent;
}

.emotion-4:has(input[disabled])>* input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-4:has(input[disabled])>* input::-moz-placeholder {
  color: transparent;
}

.emotion-4:has(input[disabled])>* input:-ms-input-placeholder {
  color: transparent;
}

.emotion-4:has(input[disabled]) input::placeholder,
.emotion-4:has(input[disabled])>* input::placeholder {
  color: transparent;
}

.emotion-5 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  outline: 0;
  width: 100%;
  background-color: inherit;
  padding: 24px 0 8px 0;
}

.emotion-5 input:-webkit-autofill,
.emotion-5 input:-webkit-autofill:hover,
.emotion-5 input:-webkit-autofill:focus,
.emotion-5 input:-webkit-autofill:active {
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
}

.emotion-5::-webkit-input-placeholder {
  color: transparent;
}

.emotion-5::-moz-placeholder {
  color: transparent;
}

.emotion-5:-ms-input-placeholder {
  color: transparent;
}

.emotion-5::placeholder {
  color: transparent;
}

<div>
  <form
    class="emotion-0 emotion-1"
    data-testid="test-form"
  >
    <div
      class="emotion-2"
      data-testid="label-1-text-field"
    >
      <label
        class="emotion-3"
        data-testid="label-field"
        for="label-1"
      >
        label 1
      </label>
      <div
        class="emotion-4"
        data-testid="input-wrapper"
      >
        <input
          class="emotion-5"
          data-error="false"
          data-testid="input-field"
          id="label-1"
          name="label-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="emotion-2"
      data-testid="label-2-text-field"
    >
      <label
        class="emotion-3"
        data-testid="label-field"
        for="label-2"
      >
        label 2
      </label>
      <div
        class="emotion-4"
        data-testid="input-wrapper"
      >
        <input
          class="emotion-5"
          data-error="false"
          data-testid="input-field"
          id="label-2"
          name="label-2"
          type="text"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`<Form /> component with Form.Group should render a disabled form group 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  row-gap: 24px;
}

.emotion-2 {
  row-gap: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  color: #252525;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-box-pack: stretch;
  -ms-flex-pack: stretch;
  -webkit-justify-content: stretch;
  justify-content: stretch;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  opacity: 0.5;
  pointer-events: none;
}

@media only screen and (min-width: 768px) {
  .emotion-4 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
  width: 100%;
  position: relative;
}

.emotion-6 i {
  color: #3e3e3e;
}

.emotion-6:has(input[disabled]) i,
.emotion-6:has(input[disabled]) label>span {
  color: #a9a9a9;
}

.emotion-6:has(input[readonly]:not(input[disabled])) label,
.emotion-6:has(input[readonly]:not(input[disabled])) label>span {
  color: #3e3e3e;
}

.emotion-6 input[type="search"]::-webkit-search-decoration,
.emotion-6 input[type="search"]::-webkit-search-cancel-button,
.emotion-6 input[type="search"]::-webkit-search-results-button,
.emotion-6 input[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-7 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e3e3e;
  cursor: inherit;
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  left: 12px;
  top: 16px;
  position: absolute;
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 198px;
  width: 100%;
  height: 54px;
  color: #252525;
  gap: 8px;
  background-color: #e6e6e6;
  padding-inline: 12px;
  border-radius: 0px;
  border: 1px solid #c5c5c5;
}

.emotion-8:focus-within,
.emotion-8:hover:not([disabled]) {
  border: 1px solid #00677f;
}

.emotion-8:hover:([disabled]) {
  border: 1px solid #c5c5c5;
}

.emotion-8:has(input[readonly]:not([disabled])) {
  background-color: #e6e6e6;
  color: #3e3e3e;
}

.emotion-8:has(input[disabled]),
.emotion-8:has(input[disabled])>* {
  cursor: not-allowed;
}

.emotion-8:has(input[disabled]):hover,
.emotion-8:has(input[disabled])>*:hover {
  border-color: #c5c5c5;
}

.emotion-8:has(input[disabled]) input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-8:has(input[disabled]) input::-moz-placeholder {
  color: transparent;
}

.emotion-8:has(input[disabled]) input:-ms-input-placeholder {
  color: transparent;
}

.emotion-8:has(input[disabled])>* input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-8:has(input[disabled])>* input::-moz-placeholder {
  color: transparent;
}

.emotion-8:has(input[disabled])>* input:-ms-input-placeholder {
  color: transparent;
}

.emotion-8:has(input[disabled]) input::placeholder,
.emotion-8:has(input[disabled])>* input::placeholder {
  color: transparent;
}

.emotion-9 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  outline: 0;
  width: 100%;
  background-color: inherit;
  padding: 24px 0 8px 0;
}

.emotion-9 input:-webkit-autofill,
.emotion-9 input:-webkit-autofill:hover,
.emotion-9 input:-webkit-autofill:focus,
.emotion-9 input:-webkit-autofill:active {
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
}

.emotion-9::-webkit-input-placeholder {
  color: transparent;
}

.emotion-9::-moz-placeholder {
  color: transparent;
}

.emotion-9:-ms-input-placeholder {
  color: transparent;
}

.emotion-9::placeholder {
  color: transparent;
}

<div>
  <form
    class="emotion-0 emotion-1"
    data-testid="test-form"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
        disabled=""
      >
        <div
          class="emotion-6"
          data-testid="label-1-text-field"
        >
          <label
            class="emotion-7"
            data-testid="label-field"
            for="label-1"
          >
            label 1
          </label>
          <div
            class="emotion-8"
            data-testid="input-wrapper"
          >
            <input
              class="emotion-9"
              data-error="false"
              data-testid="input-field"
              id="label-1"
              name="label-1"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`<Form /> component with Form.Group should render a form with display flex 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  row-gap: 24px;
}

.emotion-2 {
  row-gap: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  color: #252525;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-box-pack: stretch;
  -ms-flex-pack: stretch;
  -webkit-justify-content: stretch;
  justify-content: stretch;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media only screen and (min-width: 768px) {
  .emotion-4 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
  width: 100%;
  position: relative;
}

.emotion-6 i {
  color: #3e3e3e;
}

.emotion-6:has(input[disabled]) i,
.emotion-6:has(input[disabled]) label>span {
  color: #a9a9a9;
}

.emotion-6:has(input[readonly]:not(input[disabled])) label,
.emotion-6:has(input[readonly]:not(input[disabled])) label>span {
  color: #3e3e3e;
}

.emotion-6 input[type="search"]::-webkit-search-decoration,
.emotion-6 input[type="search"]::-webkit-search-cancel-button,
.emotion-6 input[type="search"]::-webkit-search-results-button,
.emotion-6 input[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-7 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e3e3e;
  cursor: inherit;
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  left: 12px;
  top: 16px;
  position: absolute;
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 198px;
  width: 100%;
  height: 54px;
  color: #252525;
  gap: 8px;
  background-color: #e6e6e6;
  padding-inline: 12px;
  border-radius: 0px;
  border: 1px solid #c5c5c5;
}

.emotion-8:focus-within,
.emotion-8:hover:not([disabled]) {
  border: 1px solid #00677f;
}

.emotion-8:hover:([disabled]) {
  border: 1px solid #c5c5c5;
}

.emotion-8:has(input[readonly]:not([disabled])) {
  background-color: #e6e6e6;
  color: #3e3e3e;
}

.emotion-8:has(input[disabled]),
.emotion-8:has(input[disabled])>* {
  cursor: not-allowed;
}

.emotion-8:has(input[disabled]):hover,
.emotion-8:has(input[disabled])>*:hover {
  border-color: #c5c5c5;
}

.emotion-8:has(input[disabled]) input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-8:has(input[disabled]) input::-moz-placeholder {
  color: transparent;
}

.emotion-8:has(input[disabled]) input:-ms-input-placeholder {
  color: transparent;
}

.emotion-8:has(input[disabled])>* input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-8:has(input[disabled])>* input::-moz-placeholder {
  color: transparent;
}

.emotion-8:has(input[disabled])>* input:-ms-input-placeholder {
  color: transparent;
}

.emotion-8:has(input[disabled]) input::placeholder,
.emotion-8:has(input[disabled])>* input::placeholder {
  color: transparent;
}

.emotion-9 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  outline: 0;
  width: 100%;
  background-color: inherit;
  padding: 24px 0 8px 0;
}

.emotion-9 input:-webkit-autofill,
.emotion-9 input:-webkit-autofill:hover,
.emotion-9 input:-webkit-autofill:focus,
.emotion-9 input:-webkit-autofill:active {
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
}

.emotion-9::-webkit-input-placeholder {
  color: transparent;
}

.emotion-9::-moz-placeholder {
  color: transparent;
}

.emotion-9:-ms-input-placeholder {
  color: transparent;
}

.emotion-9::placeholder {
  color: transparent;
}

<div>
  <form
    class="emotion-0 emotion-1"
    data-testid="test-form"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6"
          data-testid="label-1-text-field"
        >
          <label
            class="emotion-7"
            data-testid="label-field"
            for="label-1"
          >
            label 1
          </label>
          <div
            class="emotion-8"
            data-testid="input-wrapper"
          >
            <input
              class="emotion-9"
              data-error="false"
              data-testid="input-field"
              id="label-1"
              name="label-1"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="emotion-6"
          data-testid="label-2-text-field"
        >
          <label
            class="emotion-7"
            data-testid="label-field"
            for="label-2"
          >
            label 2
          </label>
          <div
            class="emotion-8"
            data-testid="input-wrapper"
          >
            <input
              class="emotion-9"
              data-error="false"
              data-testid="input-field"
              id="label-2"
              name="label-2"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`<Form /> component with Form.Group should render a form with group title 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  row-gap: 24px;
}

.emotion-2 {
  row-gap: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  color: #252525;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-column-gap: 10px;
  column-gap: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  font-family: Daimler CS;
  font-size: 16px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #000000;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-box-pack: stretch;
  -ms-flex-pack: stretch;
  -webkit-justify-content: stretch;
  justify-content: stretch;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media only screen and (min-width: 768px) {
  .emotion-7 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
  width: 100%;
  position: relative;
}

.emotion-9 i {
  color: #3e3e3e;
}

.emotion-9:has(input[disabled]) i,
.emotion-9:has(input[disabled]) label>span {
  color: #a9a9a9;
}

.emotion-9:has(input[readonly]:not(input[disabled])) label,
.emotion-9:has(input[readonly]:not(input[disabled])) label>span {
  color: #3e3e3e;
}

.emotion-9 input[type="search"]::-webkit-search-decoration,
.emotion-9 input[type="search"]::-webkit-search-cancel-button,
.emotion-9 input[type="search"]::-webkit-search-results-button,
.emotion-9 input[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-10 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e3e3e;
  cursor: inherit;
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  left: 12px;
  top: 16px;
  position: absolute;
  -webkit-transform: translateY(0);
  -moz-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 198px;
  width: 100%;
  height: 54px;
  color: #252525;
  gap: 8px;
  background-color: #e6e6e6;
  padding-inline: 12px;
  border-radius: 0px;
  border: 1px solid #c5c5c5;
}

.emotion-11:focus-within,
.emotion-11:hover:not([disabled]) {
  border: 1px solid #00677f;
}

.emotion-11:hover:([disabled]) {
  border: 1px solid #c5c5c5;
}

.emotion-11:has(input[readonly]:not([disabled])) {
  background-color: #e6e6e6;
  color: #3e3e3e;
}

.emotion-11:has(input[disabled]),
.emotion-11:has(input[disabled])>* {
  cursor: not-allowed;
}

.emotion-11:has(input[disabled]):hover,
.emotion-11:has(input[disabled])>*:hover {
  border-color: #c5c5c5;
}

.emotion-11:has(input[disabled]) input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-11:has(input[disabled]) input::-moz-placeholder {
  color: transparent;
}

.emotion-11:has(input[disabled]) input:-ms-input-placeholder {
  color: transparent;
}

.emotion-11:has(input[disabled])>* input::-webkit-input-placeholder {
  color: transparent;
}

.emotion-11:has(input[disabled])>* input::-moz-placeholder {
  color: transparent;
}

.emotion-11:has(input[disabled])>* input:-ms-input-placeholder {
  color: transparent;
}

.emotion-11:has(input[disabled]) input::placeholder,
.emotion-11:has(input[disabled])>* input::placeholder {
  color: transparent;
}

.emotion-12 {
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  outline: 0;
  width: 100%;
  background-color: inherit;
  padding: 24px 0 8px 0;
}

.emotion-12 input:-webkit-autofill,
.emotion-12 input:-webkit-autofill:hover,
.emotion-12 input:-webkit-autofill:focus,
.emotion-12 input:-webkit-autofill:active {
  -webkit-transition: background-color 5000s ease-in-out 0s;
  transition: background-color 5000s ease-in-out 0s;
}

.emotion-12::-webkit-input-placeholder {
  color: transparent;
}

.emotion-12::-moz-placeholder {
  color: transparent;
}

.emotion-12:-ms-input-placeholder {
  color: transparent;
}

.emotion-12::placeholder {
  color: transparent;
}

<div>
  <form
    class="emotion-0 emotion-1"
    data-testid="test-form"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <p
          class="emotion-6"
          color="primary.default"
          data-testid="typography"
          style="text-transform: uppercase;"
        >
          Group title
        </p>
      </div>
      <div
        class="emotion-7 emotion-8"
      >
        <div
          class="emotion-9"
          data-testid="label-1-text-field"
        >
          <label
            class="emotion-10"
            data-testid="label-field"
            for="label-1"
          >
            label 1
          </label>
          <div
            class="emotion-11"
            data-testid="input-wrapper"
          >
            <input
              class="emotion-12"
              data-error="false"
              data-testid="input-field"
              id="label-1"
              name="label-1"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="emotion-9"
          data-testid="label-2-text-field"
        >
          <label
            class="emotion-10"
            data-testid="label-field"
            for="label-2"
          >
            label 2
          </label>
          <div
            class="emotion-11"
            data-testid="input-wrapper"
          >
            <input
              class="emotion-12"
              data-error="false"
              data-testid="input-field"
              id="label-2"
              name="label-2"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
